# atlas-uraba

./: .gitignore  FASE1_PLAN.md  MORNING_BRIEFING.md  Makefile  README.md  geocode_equipamientos.py  pyproject.toml
.github/workflows/: ci.yml
data/outputs/: atlas_uraba_v2_indicadores.csv  atlas_uraba_v3_indicadores.csv
data/outputs/indicadores/: piloto_apartado_atlas.geojson  piloto_apartado_resumen.csv
data/processed/: auditoria_osm_uraba.json
data/processed/equipamientos/: reps_uraba.csv  simat_uraba.csv
data/processed/manzanas/: cnpv2018_uraba.csv  grid_sintetico_uraba.gpkg
docs/arquitectura/: stack.md
docs/metodologia/: fuentes.md  fuentes_verificadas.md  indicadores.md
infra/: docker-compose.yml  environment.yml  init.sql
notebooks/: 01_auditoria_osm.ipynb  02_dane_cnpv_manzana.ipynb  03_igac_catastro.ipynb  04_satelital_gee.ipynb  05_equipamientos.ipynb  06_indice_piloto.ipynb
scripts/: download_data.sh  geocode_equipamientos.py  setup_gee.py
src/: config.py
src/composite/: aggregator.py  normalizer.py  pca_index.py  spatial_clusters.py
src/indicators/: base.py
src/indicators/accesibilidad/: areas_verdes.py  culturales.py  deportivos.py  educacion.py  salud.py  servicios_publicos.py
src/indicators/ambiental/: ndvi.py  temperatura.py
src/ingestion/: dane_loader.py  gee_downloader.py  igac_loader.py  men_loader.py  minsal_loader.py  osm_extractor.py  siedco_loader.py
src/processing/: cnpv_enricher.py  disaggregate.py
src/viz/: kepler_export.py
tests/: test_clusters.py  test_disaggregation.py  test_indicators.py
(+6 files in other folders)
