[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "atlas-uraba"
version = "0.1.0"
description = "Atlas de Bienestar Humano Territorial — Urabá, Antioquia"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=0.14",
    "pandas>=2.0",
    "numpy>=1.26",
    "shapely>=2.0",
    "pyproj>=3.6",
    "fiona>=1.9",
    "rasterio>=1.3",
    "osmnx>=1.9",
    "networkx>=3.2",
    "pysal",
    "esda",
    "libpysal",
    "tobler",
    "scikit-learn",
    "scipy",
    "psycopg2-binary",
    "sqlalchemy>=2.0",
    "geoalchemy2",
    "keplergl",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff", "black"]
gee = ["earthengine-api"]
routing = ["r5py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
